fix collapse header button thing

--- a/src/main/webapp/css/buckyless/myuw-toolkit-temporary.less
+++ b/src/main/webapp/css/buckyless/myuw-toolkit-temporary.less
@@ -25,3 +25,15 @@
     color:@white;
   }
 }
+
+.portlet-header.collapse-header {		
+  height: 50px;		
+  h1 {		
+    font-size : x-large;		
+  }		
+}		
+		
+.portlet-header button {		
+  float: right;		
+  margin-right : 10px;		
+}
